chatbot-api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatbot-backend-deployment
  namespace: chatbot-ns
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: chatbot-backend
  template:
    metadata:
      labels:
        app: chatbot-backend
    spec:
      containers:
        - name: chatbot-api
          image: rodriguez003/springrestapi:2.0  
          ports:
          - containerPort: 8080  
          volumeMounts:
            - name: secret-config
              readOnly: true
              mountPath: "/etc/secret-volume"
            - name: config-volume
              mountPath: /etc/config
      volumes:
          - name: secret-config
            secret:
              secretName: chatbot-secret
          - name: config-volume
            configMap:         
              name: chatbot-cm    
      restartPolicy: Always
