chatbot-api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: chatbot-backend-service
  namespace: chatbot-ns
spec:
  selector:
    app: chatbot-backend
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080 
  type: ClusterIP
