chatbot-ihm-service.yml
apiVersion: v1
kind: Service
metadata:
  name: chatbot-frontend-nodeport-service
  namespace: chatbot-ns
spec:
  selector:
    app: chatbot-frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
    nodePort: 30001
  type: NodePort
